third_party/move/tools/move-decompiler/tests/compiler-v2-test/lambda-spec/inline-lambda.exp
module 0x42::Test {
    fun call_inline(y: u64) {
        let _t1 = 3 + y;
        let _t2 = y;
        y = _t2;
        while (_t1 > 0) y + 1;
    }
    public fun test_apply(a1: u64, a2: u64) {
        ()
    }
}

--- unable to recompile the decompiled code:
exiting with context checking errors
error: expected expression with no value but found `u64`
  ┌─ inline-lambda.move:6:25
  │
6 │         while (_t1 > 0) y + 1;
  │                         ^^^^^
